Fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,9 @@
 
 @layer base {
   html {
+    position: relative;
     font-size: 14px;
+    overflow-x: hidden;
   }
   @media (min-width: 768px) {
     html {
